# BetterMHD

./: .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
main/: CMakeLists.txt
main/src/: main.cpp
